k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: register-ingress
spec:
  rules:
  - host: register.clockhash.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: "/pre-register"
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: "/verify-otp"
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
